Updates for adding alignment fixes

--- a/customStyle.css
+++ b/customStyle.css
@@ -2279,15 +2279,39 @@ responsive
 
         .my-icon {
             position: fixed;
-            right: -440px;
+            left: 25px;
             bottom: 100px;
             z-index: 1000;
         }
+
+        .call-icon {
+            position: fixed;
+            right: 20px;
+            bottom: 100px;
+            z-index: 1000;
+            text-align: right;
+            animation: shake 1s;
+            animation-iteration-count: infinite;
+        }
+          
+          @keyframes shake {
+            0% { transform: translate(1px, 1px) rotate(0deg); }
+            10% { transform: translate(-1px, -2px) rotate(-1deg); }
+            20% { transform: translate(-3px, 0px) rotate(1deg); }
+            30% { transform: translate(3px, 2px) rotate(0deg); }
+            40% { transform: translate(1px, -1px) rotate(1deg); }
+            50% { transform: translate(-1px, 2px) rotate(-1deg); }
+            60% { transform: translate(-3px, 1px) rotate(0deg); }
+            70% { transform: translate(3px, 1px) rotate(-1deg); }
+            80% { transform: translate(-1px, -1px) rotate(1deg); }
+            90% { transform: translate(1px, 2px) rotate(0deg); }
+            100% { transform: translate(1px, -2px) rotate(-1deg); }
+          }
 
         .navbar .site-menu {
             margin-left: auto !important;
         }
 
-        .headerContainer{
+        .headerContainer {
             padding-top: 15px;
         }
